Other JVM perf options to play with